--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,20 +6,28 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/argon_108.inp
     ${CMAKE_CURRENT_BINARY_DIR}/argon_108.inp COPYONLY)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/argon_2916.inp
     ${CMAKE_CURRENT_BINARY_DIR}/argon_2916.inp COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/argon_78732.inp
+    ${CMAKE_CURRENT_BINARY_DIR}/argon_78732.inp COPYONLY)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/argon_108.rest
     ${CMAKE_CURRENT_BINARY_DIR}/argon_108.rest COPYONLY)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/argon_2916.rest
     ${CMAKE_CURRENT_BINARY_DIR}/argon_2916.rest COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/argon_78732.rest
+    ${CMAKE_CURRENT_BINARY_DIR}/argon_78732.rest COPYONLY)
 
 # Also copy the reference files
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../reference/argon_108.dat
     ${CMAKE_CURRENT_BINARY_DIR}/../reference/argon_108.dat COPYONLY)
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../reference/argon_2916.dat
     ${CMAKE_CURRENT_BINARY_DIR}/../reference/argon_2916.dat COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../reference/argon_2916.dat
+    ${CMAKE_CURRENT_BINARY_DIR}/../reference/argon_2916.dat COPYONLY)
 
 # add check target
 add_custom_target(check_example
-COMMAND ../ljmd-serial.x < argon_108.inp
+
+COMMAND ../ljmd.x < argon_108.inp
+
 COMMAND head -10 argon_108.dat > a.dat
 COMMAND head -10 ../reference/argon_108.dat > b.dat
 COMMAND cmp a.dat b.dat || exit 1
