--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,7 @@ FetchContent_MakeAvailable(gtest)
 
 add_executable(unit_tests kinetic_energy.cpp first_velverlet.cpp utilities.cpp input_output.cpp)
 target_link_options(unit_tests PRIVATE -fopenmp)
-target_link_libraries(unit_tests PRIVATE mdlib-util mdlib-mpi gtest_main)
+target_link_libraries(unit_tests PRIVATE mdlib-util mdlib-serial gtest_main)
 
 add_executable(serial_tests forces.cpp)
 target_link_libraries(serial_tests PRIVATE mdlib-util mdlib-serial gtest_main)
